# uptime-kuma-mcp

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
src/uptime_kuma_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
src/uptime_kuma_mcp/tools/: data_tools.py  docker_host_tools.py  maintenance_tools.py  monitor_tools.py  notification_tools.py  server_tools.py  status_page_tools.py  tag_tools.py
